# argstore

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yaml  ci_cd.yaml  test_after_deploying.yaml
argstore/: app.py  crud.py  database.py  main.py  models.py  router.py  settings.py
argstore/migration/: env.py
argstore/migration/versions/: 72750a40b97c_init.py
argstore/migrations/: env.py
argstore/migrations/versions/: c61f0005733b_development_is_over.py
argstore/parameters/: api.py  crud.py  models.py  router.py  schemas.py
argstore/users/: api.py  crud.py  models.py  schemas.py
tests/: conftest.py  test_app.py  test_argstore.py  test_database.py  test_main.py  test_root_api.py
tests/parameters/: conftest.py  test_delete_parameter.py  test_get_all_user_parameters.py  test_get_parameter_api.py  test_router.py  test_schemas.py  test_set_parameters_api.py  test_set_parameters_with_json_api.py
tests/users/: test_user_api.py  test_user_schema.py
