[tool.poetry]
name = "argstore"
version = "0.0.0"
description = ""
authors = ["fleshofcat <fleshofcat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
