[tool.poetry]
name = "argstore"
version = "0.0.0"
description = "Simple REST API for storing parameters"
authors = ["fleshofcat <fleshofcat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
